Find out earlier if we need to fallback